--- a/project.html
+++ b/project.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Weather Web Page</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Weather App</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1>Weather Checker</h1>
-        <form id="weatherForm">
-            <label for="city">Enter City:</label>
-            <input type="text" id="city" name="city" required>
-            <button type="submit">Get Weather</button>
-        </form>
-        <div class="weather-info" id="weatherInfo">
-        </div>
+      <h1>🌤 Weather App</h1>
+      <form id="searchForm">
+        <input type="text" id="cityInput" placeholder="Enter city" />
+        <button type="submit">Search</button>
+      </form>
+      <div id="weatherResult"></div>
     </div>
     <script src="script.js"></script>
-</body>
-</html> 
+  </body>
+</html>
